--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,5 @@
-[package]
-name = "pga"
-version = "0.1.0"
-authors = ["Emil Ernerfeldt <emilernerfeldt@gmail.com>"]
-edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-derive_more = "0.99"
-itertools = "0.8"
+[workspace]
+members = [
+	"generate",
+	"pga",
+]
