--- a/generator/Cargo.toml
+++ b/generator/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
-name = "generator"
-version = "0.1.0"
 authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
 edition = "2018"
+license = "MIT OR Apache-2.0"
+name = "generator"
+version = "0.1.0"
 
 [dependencies]
 derive_more = "0.99"
